--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-tkinter
-spotipy
-concurrent.futures
-SpotifyPlaylist
-youtubesearchpython
-spotipy.oauth2
-pytube
+spotipy==2.20.0
+pytube==12.1.0
+youtube-search-python==1.6.6
